# procedural-planet

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  render.rs
src/template/: adjacencies.rs  edges.rs  mod.rs
src/terrain/: biomes.rs  borders.rs  mod.rs  tectonics.rs
src/weather/: advection.rs  atmosphere.rs  fluid.rs  mod.rs  ocean.rs  precipitation.rs  temperatures.rs
