[package]
name = "planet"
default-run = "main"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"

[dependencies]
bevy = "0.17.3"
rand = "0.9.2"
triangulation = { path = "../triangulation" } # locally stored
math = { path = "../math" } # locally stored
noise = "0.9.0"
